# makeholiday

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  deny.toml
.github/workflows/: audit.yml  ci.yml  release-crates.yml  release.yml  reserve-names.yml
crates/ics-core/: Cargo.toml  README.md
crates/ics-core/src/: calendar.rs  error.rs  event.rs  lib.rs  parser.rs  query.rs  raw.rs  vcalendar.rs
crates/ics-core/src/parser/: escape.rs  line.rs  mod.rs  unfold.rs
crates/ics-core/src/profile/: google.rs  icloud.rs  microsoft.rs  mod.rs
crates/icscli/: Cargo.toml  README.md
crates/icscli/src/: error.rs  icons.rs  input.rs  lib.rs  main.rs
crates/icscli/src/application/: ports.rs  use_cases.rs
crates/icscli/src/infrastructure/: file_calendar_repository.rs
crates/icscli/src/presentation/: cli.rs  mod.rs
crates/icscli/tests/: cli.rs
crates/icslint/: Cargo.toml  README.md
crates/icslint/src/: diagnostic.rs  lib.rs  main.rs  walker.rs
crates/icslint/src/reporter/: github.rs  human.rs  json.rs  mod.rs
crates/icslint/src/rules/: mod.rs  rfc5545.rs  structure.rs  text.rs  vendor.rs
crates/icslint/tests/: cli.rs
crates/lazyics/: Cargo.toml  README.md
crates/lazyics/src/: error.rs  lib.rs  main.rs
crates/lazyics/src/application/: mod.rs
crates/lazyics/src/infrastructure/: terminal.rs
crates/lazyics/src/presentation/: keymap.rs  mod.rs
crates/lazyics/src/presentation/screens/: add_form.rs  event_form.rs  grid.rs  help.rs  list.rs  mod.rs  timeline.rs
crates/lazyics/src/presentation/widgets/: mod.rs  text_input.rs
crates/makeholiday/: Cargo.toml
crates/makeholiday/src/: cli.rs  commands.rs  display.rs  error.rs  icons.rs  lib.rs  main.rs
crates/makeholiday/src/application/: ports.rs  use_cases.rs
crates/makeholiday/src/infrastructure/: file_calendar_repository.rs  mod.rs
crates/makeholiday/src/presentation/: cli.rs
crates/makeholiday/tests/: cli.rs
docs/: CHANGELOG.jp.md  CONTRIBUTING.jp.md  CONTRIBUTING.md  PRD.jp.md  PRD.md  README.jp.md  SETUP.jp.md  SETUP.md  USAGE.jp.md  USAGE.md
docs/design/: 000-ADR-policy.md  001-vendor-extension-typing.md  002-language-and-edition.md  003-dual-license.md  004-trunk-based-and-semver.md  005-conventional-commits.md  006-testing-strategy.md  007-documentation-language-policy.md  008-msrv.md  009-module-layering.md  010-lib-and-main-separation.md  011-io-boundary-and-repository.md  012-error-handling.md  013-dependency-policy.md  014-ci-cd-platform.md  015-diagnostic-output.md  016-configuration-file-policy.md  017-workspace-and-ics-core-crate.md  018-round-trip-strategy.md  019-parser-implementation.md  020-cli-subcommand-policy.md  021-vtodo-scope.md  022-tui-front-end-policy.md  023-no-convert-subcommand.md  024-solo-phase-branching-carve-out.md  025-lazyics-project-definition.md  026-icslint-project-definition.md  027-makeholiday-to-icscli-rename.md  028-split-subcommand.md
docs/icslint/rules/: rfc5545.md  structure.md  text.md  vendor.md
src/: cli.rs  commands.rs  ics.rs  main.rs
tests/: cli.rs
