[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["ShortArrow"]
repository = "https://github.com/ShortArrow/makeholiday"

[workspace.dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }

assert_cmd = "2"
predicates = "3"
tempfile = "3"
