[package]
name = "ics-core"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Typed iCalendar (RFC 5545) model with vendor-extension support — shared core for icscli, icslint, lazyics, and other consumers. Placeholder version; first real release planned at v0.2.0."
readme = "README.md"
keywords = ["icalendar", "ics", "rfc5545", "calendar", "parser"]
categories = ["parsing", "data-structures"]

[dependencies]
chrono.workspace = true
serde.workspace = true
