[package]
name = "icslint"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lint tool for iCalendar (RFC 5545) files — flags missing required fields, vendor-only extensions, escape mistakes, and structural quirks."
publish = false

[[bin]]
name = "icslint"
path = "src/main.rs"

[lib]
name = "icslint"
path = "src/lib.rs"

[dependencies]
ics-core = { path = "../ics-core", version = "0.0.0" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
