[package]
name = "icslint"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Lint tool for iCalendar (RFC 5545) files — flags missing required fields, vendor-only extensions, escape mistakes, and structural quirks. Placeholder version; first real release planned at v0.2.0."
readme = "README.md"
keywords = ["icalendar", "ics", "rfc5545", "lint", "linter"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "icslint"
path = "src/main.rs"

[lib]
name = "icslint"
path = "src/lib.rs"

[dependencies]
ics-core = { path = "../ics-core", version = "0.2.0" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
