[package]
name = "makeholiday"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ics-core = { path = "../ics-core", version = "0.0.0" }
clap.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tempfile.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
